volexc/tests/ui/mapkey_message_with_array.go.out
Error: invalid map key type: arrays cannot be used as map keys in Go
    ╭─[mapkey_message_with_array.vol:7:11]
    │
  7 │     tags: [u32] = 2
    │           ──┬──  
    │             ╰──── array type used here
    │ 
 11 │     data: {Key:string}
    │            ─┬─  
    │             ╰─── message 'Key' contains invalid field
────╯