volexc/tests/ui/mapkey_message_with_array.vol
// rust:pass
// go:fail
// typescript:fail
// Message with array field: valid in Rust only
message Key {
    id: u32 = 1;
    tags: [u32] = 2;
}

struct Test {
    data: {Key:string};
}
